--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 
 <form action="/add_task" method="POST">
 <input type="text" name="content" /> <br>
-<input type="submit" value="Add Task" />
+<input type="submit" value="TWEET" />
 </form>
 <ul>
 <%
