--- a/app/views/authentication_controller/signin_get.html.erb
+++ b/app/views/authentication_controller/signin_get.html.erb
@@ -1,8 +1,8 @@
 <%=form_tag '/signin' do %>
 
-    <%= text_field_tag :email %><br>
+ Email: <%= text_field_tag :email %><br>
 
-    <%= password_field_tag :password%>
+  Password:  <%= password_field_tag :password%><br>
     <%= submit_tag "Signin" %>
 
 <% end %>
