--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,62 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #f5f8fa;
+    padding-top: 34px;
+    padding-bottom: 34px;
+
+}
+
+#mainAside {
+    width: 25%;
+    display: inline-block;
+}
+
+#mainMain {
+    width: 70%;
+    display: inline-block;
+
+}
+
+.floatingTop {
+    font-size: 48px;
+    position: fixed;
+    right: 18px;
+    bottom: 36px;
+    height: 37px;
+    overflow: hidden;
+}
+
+.floatingTop a {
+    text-decoration: none;
+    background-color: black;
+    color: white;
+}
+
+a {
+    color: hsla(6, 89%, 59%, 1);
+}
+
+a:hover {
+    color: hsla(6, 89%, 30%, 1);
+
+}
+
+@media (max-width: 720px){
+    #mainAside{
+        display: none;
+    }
+
+    #mainMain{
+        width: 100%;
+        padding: 0 8px;
+        box-sizing: border-box;
+    }
+}
